add code style and add publish plugin

--- a/build.gradle
+++ b/build.gradle
@@ -6,14 +6,18 @@ buildscript {
     }
     dependencies {
         classpath 'org.xtext:xtext-gradle-plugin:1.0.18'
+        classpath 'net.researchgate:gradle-release:2.6.0'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.0'
     }
 }
 
 apply plugin: 'java'
 apply plugin: 'org.xtext.xtend'
 apply plugin: 'application'
+apply plugin: 'net.researchgate.release'
+apply plugin: 'com.jfrog.bintray'
 
-// apply from: 'code-style/codestyle.gradle'
+apply from: 'code-style/codestyle.gradle'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -86,3 +90,18 @@ test {
         events "standardOut", "started", "passed", "skipped", "failed"
     }
 }
+
+/*
+ * Configure release plugin.
+ * Remove tasks "updateVersion" and "commitNewVersion" as we don't want the new SNAPSHOT
+ * version commit on the master branch.
+ */
+tasks.release.tasks -= [":updateVersion", ":commitNewVersion"]
+release {
+    preTagCommitMessage = '[release]'
+    tagCommitMessage = '[release]'
+    newVersionCommitMessage = '[release] new version'
+    tagTemplate = 'v${version}'
+}
+
+afterReleaseBuild.dependsOn bintrayUpload
