--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,8 @@ jdk:
   - oraclejdk8
 cache:
   directories:
-  - $HOME/.gradle
+  - $HOME/.gradle/caches/
+  - $HOME/.gradle/wrapper/
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
+  - ./.travis-publishOnRelease.sh
