configuration changed in parent project

--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
-repoLocation: ./repo/
-repoUrl: https://github.com/test-editor/test-editor-examples.git
+localRepoFileRoot: ./repo/
+remoteRepoUrl: https://github.com/test-editor/test-editor-examples.git
 server:
   applicationConnectors:
   - type: http
