prepare for sprint review  demonstration
* make configPath settable from command-line (-PconfigPath=<PATH/TO/CONFIG.YML>)
* bump index service version up to 0.4.0 (yet to be published to Bintray...)

--- a/build.gradle
+++ b/build.gradle
@@ -36,9 +36,9 @@ ext.versions = [
     dropwizard: '1.2.0',
     xtext: '2.13.0',
     testEditorLanguage: '1.8.0',
-    xtextIndexBackend: '0.2.0'
+    xtextIndexBackend: '0.4.0'
 ]
-ext.configPath = './'
+ext.configPath = project.hasProperty('configPath') ? project.getProperty('configPath') : './'
 
 sourceSets {
     main.xtendOutputDir = 'src/main/xtend-gen'
